--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,17 +21,21 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
     }
 }
+ext {
+    supportLibVersion = '27.1.1'
+}
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:27.1.1'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.2'
-    implementation 'com.google.firebase:firebase-database:11.8.0'
+    implementation "com.android.support:appcompat-v7:$supportLibVersion"
+    implementation "com.android.support:design:$supportLibVersion"
+    implementation 'com.google.firebase:firebase-database:16.0.3'
+    implementation "com.google.firebase:firebase-ml-vision:17.0.1"
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation "com.google.ar.sceneform.ux:sceneform-ux:1.3.0"
-    implementation 'com.android.support:design:27.1.1'
 }
 
 apply plugin: 'com.google.ar.sceneform.plugin'
