--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,8 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation "com.google.ar.sceneform.ux:sceneform-ux:1.3.0"
+
+    compile 'org.tensorflow:tensorflow-android:+'
 }
 
 apply plugin: 'com.google.ar.sceneform.plugin'
