--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,3 +59,8 @@ sceneform.asset('src/main/assets/flag/USMC flag.obj',
         'default',
         'src/main/assets/flag/USMC flag.sfa',
         'src/main/assets/USMC_flag')
+
+sceneform.asset('src/main/assets/Column/Column_Made_By_Tyro_Smith.obj',
+        'default',
+        'src/main/assets/Column/Column_Made_By_Tyro_Smith.sfa',
+        'src/main/assets/Column_Made_By_Tyro_Smith')
