--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,9 @@ buildscript {
     repositories {
         google()
         jcenter()
+        maven {
+            url 'https://maven.fabric.io/public'
+        }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.1.3'
@@ -14,6 +17,8 @@ buildscript {
         // in the individual module build.gradle files
         classpath 'com.google.ar.sceneform:plugin:1.5.0'
         classpath 'com.google.gms:google-services:4.1.0'
+
+        classpath 'io.fabric.tools:gradle:1.25.4'
     }
 }
 
@@ -21,6 +26,9 @@ allprojects {
     repositories {
         google()
         jcenter()
+        maven {
+            url 'https://maven.fabric.io/public'
+        }
     }
 }
 
